# hera

./: .gitignore  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  setup.py
hera/: __main__.py  app.py
hera.dist-info/: METADATA
icons/: Hera.icns  JupyterDoc.icns
juno/: __main__.py  app.py
