[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Hera"
bundle = "com.phildini"
version = "0.1.2"

[tool.briefcase.app.hera]
formal_name = "Hera"
description = "Running Jupyter notebooks locally"
sources = ['hera']
requires = ['jupyter', 'pip']

[tool.briefcase.app.hera.macOS]
requires = ['toga-cocoa==0.3.0.dev19']
